# ytb

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.lambda  db.sqlite  logging.ini  pyproject.toml  ruff.toml  template.yml
alembic/: env.py
alembic/versions/: 2024_11_30_1738-9867e0b943a4_create_tb_user.py
logs/: app.log.2024-12-01
src/: app.py  lambda_handler.py  logger.py  main.py  settings.py
src/api/: __init__.py
src/api/auth/: api.py  routes.py  securities.py  services.py
src/api/studio/: api.py
src/core/: ctx_vars.py  logger.py
src/db/: __init__.py
src/middlewares/: __init__.py  middleware_info_req.py
src/models/: users.py
src/schemas/: users.py
src/services/: authentication.py  user_ser.py  user_signal_ser.py  utils.py
tests/: test_requets_concurrent.py
