[project]
name = "youtube-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "async-sqlmodel>=0.1.3",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.5",
    "passlib>=1.7.4",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "W", "I"]
exclude = [".venv"]


[tool.pyright]
venvPath = "."
venv = ".venv"
